# Task

./: CMakeLists.txt  CMakeUserPresets.json  README
include/: calculator.h  mainwnd.hpp
src/: calculator.c  gui.cpp  mainwnd.cpp  test.cpp
